<?xml version="1.0"?>
<package>
  <name>roomba_stage</name>
  <version>0.2.1</version>
  <description>The roomba_stage package</description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/roomba_stage</url>
  <url type="repository">https://github.com/ros-planning/navigation_tutorials</url>
  <url type="bugtracker">https://github.com/ros-planning/navigation_tutorials/issues</url>

  <author>Gonçalo Cabrita</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>fake_localization</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>stage_ros</build_depend>

  <run_depend>fake_localization</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>stage_ros</run_depend>

</package>